--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "cache": "npm cache clean --force",
     "test": "jest",
-    "cache": "npm cache clean --force"
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
     "express": "^4.21.2",
+    "globals": "^15.14.0",
     "jest": "^29.7.0"
   }
 }
